# anasaizi

./: .gitignore  README.MD
anasaizi-core/: Cargo.toml  fragment.glsl
anasaizi-core/profiler/: InfluxDBEngineWriter.deps.json
anasaizi-core/src/: application.rs  command_buffer.rs  command_pool.rs  device.rs  engine.rs  extensions.rs  framebuffer.rs  instance.rs  layer.rs  lib.rs  math.rs  model.rs  pipeline.rs  queue.rs  render_pass.rs  shader.rs  structures.rs  surface.rs  swapchain.rs  utils.rs  version.rs  vulkan.rs  window.rs
anasaizi-core/src/debug/: mod.rs  profile.rs  profile_disabled.rs  profile_enabled.rs
anasaizi-core/src/ecs/: entities.rs
anasaizi-core/src/engine/: application.rs  buffer_layout.rs  camera.rs  ecs.rs  extensions.rs  gltf.rs  image.rs  input_pool.rs  keycode.rs  layer.rs  light.rs  push_constants.rs  renderer.rs  resources.rs  uniform_objects.rs  version.rs
anasaizi-core/src/engine/ecs/: entities.rs  gpu_mesh_memory.rs  transform.rs  world.rs
anasaizi-core/src/engine/gltf/: gltf_buffer_loader.rs  gltf_texture_loader.rs  loader.rs  mappers.rs  material.rs  mesh.rs  node.rs  primitive.rs  root.rs  (+2 more)
anasaizi-core/src/math/: vertex.rs
anasaizi-core/src/model/: mesh.rs  object.rs
anasaizi-core/src/vulkan/: application.rs  buffer_layout.rs  buffers.rs  command_buffer.rs  command_pool.rs  descriptor_pool.rs  device.rs  extensions.rs  framebuffer.rs  image_view.rs  instance.rs  layer.rs  object_picker.rs  pipeline.rs  queue.rs  render_pass.rs  shader.rs  structures.rs  surface.rs  swapchain.rs  version.rs  window.rs
anasaizi-editor/: Cargo.toml  build-shaders.bat  build.rs  fragment.frag  output.json  rustfmt.toml  vert.spv  vertex.vert  viking_room.mtl
anasaizi-editor/assets/: build-shaders.bat  frag.spv  fragment.frag  grid_frag.frag  grid_frag.spv  grid_vert.spv  grid_vert.vert  ui_vert.spv  vert.spv  vertex.vert
anasaizi-editor/assets/3d_street_uh4ffdmga/: uh4ffdmga.json
anasaizi-editor/assets/shaders/: build-shaders.bat  fragment.frag  grid_frag.frag  grid_vert.vert  mouse_pick.frag  mouse_pick.vert  pbr.frag  pbr_gltf.frag  pbr_gltf.vert  pong_lighting.frag  pong_lighting.vert  ui_frag.frag  ui_vert.vert  vertex.vert
anasaizi-editor/src/: game_layer.rs  imgui_layer.rs  main.rs  sandbox.rs
(+23 files in other folders)
