[package]
name = "anasaizi-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
ash="0.32.1"
winapi = "0.3.9"
num = "0.4.0"

anasaizi-profile ={path = "../anasaizi-profile" }
lazy_static="1.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nalgebra = "0.27.1"

[features]
profile = []
