[package]
name = "anasaizi-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
ash="0.32.1"
winapi = "0.3.9"
num = "0.4.0"
image="0.23.14"
imgui = "0.7.0"
imgui-winit-support = {default-features = false, features = ["winit-25"] }

anasaizi-profile ={path = "../anasaizi-profile" }
lazy_static="1.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nalgebra = "0.27.1"
tobj = "3.0.1"
cgmath="0.18.0"
ultraviolet = "0.8.1"
[features]
profile = []
