[package]
name = "Anasazi"
version = "0.1.0"
authors = ["Timon <timonpost@hotmail.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anasaizi-core ={path = "../anasaizi-core" }
winit = "0.25.0"
ash="0.32.1"
winapi = "0.3.9"
num = "0.4.0"
