[package]
name = "Anasazi"
version = "0.1.0"
authors = ["Timon <timonpost@hotmail.nl>"]
edition = "2018"

[dependencies]
anasaizi-core ={path = "../anasaizi-core"}
anasaizi-profile ={path = "../anasaizi-profile" }

winit = "0.25.0"
ash="0.32.1"
winapi = "0.3.9"
num = "0.4.0"
hecs="0.6.0"

[features]
profile = ["anasaizi-core/profile", "anasaizi-profile/profile"]
